# 00_coralnpu

./: .bazelrc  CONTRIBUTING_cn.md  README_cn.md  WORKSPACE  coralnpu-enter.sh
doc/: integration_guide_cn.md  overview_cn.md  simulation_cn.md
doc/microarch/: debug_cn.md  dispatch_cn.md  lsu_cn.md  microarch_cn.md  mlu_cn.md
doc/peripherals/: dma_cn.md
doc/sw/: dma_cn.md
doc/tutorials/: npusim_mobilenet_tutorial_cn.md  writing_coralnpu_programs_cn.md
examples/: BUILD.bazel  hello_world_printf.cc
fpga/ip/i2c_master/: README_cn.md
hdl/chisel/src/coralnpu/: BUILD
hdl/chisel/src/coralnpu/scalar/: Csr.scala  UncachedFetch.scala  UncachedFetchTest.scala
hdl/verilog/rvv/design/: rvv_backend_falu_unit.sv
rules/: coco_tb.bzl  repos.bzl
tests/cocotb/: BUILD  build_defs.bzl  rvv_ml_ops_cocotb_test.py
tests/cocotb/rvv/ml_ops/static_reference_tests/: README_cn.md
tests/cocotb/tutorial/: hello_world_float_core_mini_axi.py  program.cc  tutorial.py
tests/cocotb/tutorial/counters/: README_cn.md
tests/npusim_examples/: npusim_run_mobilenet.py
tests/uvm/: README_cn.md
tests/vcs_sim/: BUILD
toolchain/build_scripts/: README_cn.md
utils/: coralnpu.classic.dockerfile  run_uvm_regression.py
