# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//rules:coralnpu_v2.bzl", "coralnpu_v2_binary")

coralnpu_v2_binary(
    name = "coralnpu_v2_hello_world_add_floats",
    srcs = ["hello_world_add_floats.cc"],
)

coralnpu_v2_binary(
    name = "coralnpu_v2_rvv_add_intrinsic",
    srcs = ["rvv_add_intrinsic.cc"],
)

coralnpu_v2_binary(
    name = "hello_world_printf",
    srcs = ["hello_world_printf.cc"],
    semihosting = True,          # 走 HTIF,printf 才有去处
    itcm_size_kbytes = 1024,     # 跟 highmem 硬件对齐
    dtcm_size_kbytes = 1024,
    linkopts = ["-u", "_printf_float"],   # ← 加这一行
)